@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  23 May 2006; Roy Marples <uberlord@gentoo.org>:
+
+    halt.sh can now deal with unionfs a bit better, #99682.
+
   16 May 2006; Roy Marples <uberlord@gentoo.org>:
 
     Always report Xen domU domains correctly, #107976.
